--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=config-service
 server.port=9999
 spring.cloud.config.server.git.uri=https://github.com/yeonoel/Bank-account-config-repos/
 # spring.cloud.config.server.git.uri=file:///home/light/java_workspace/micro_service/bank-account-app/config-repo
+
+spring.cloud.config.enabled=true
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=${DISCOVERY-SERVICE_URL:http://localhost:8761/eureka}
+management.endpoints.web.exposure.exclude=*
